--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.blend filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.webm filter=lfs diff=lfs merge=lfs -text
