--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           npm install
       - name: Build application
         run: |
-          npm build --base /ohsu_seminar/
+          slidev build --base /ohsu_seminar/
           cp disst/index.html dist/404.html
       - name: Deploy pages
         uses: crazy-max/ghaction-github-pages@v2.3.0
