this might do the trick

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
+      - name: Install slidev
+        run:  npm i -g @slidev/cli
       - name: Build application
         run: |
           slidev build --base /ohsu_seminar/
